# marginalia-plugin-logos

./: .gitignore  AUTHENTICATION.md  pack.yaml  pyproject.toml
logos/auth/: diagnose.py  manager.py  playwright_login.py
logos/cli/: __init__.py  diagnose.py  login.py
logos/db/: pool.py
logos/http/: client.py
logos/lib/: types.py
logos/tools/: diagnose.py
tests/unit/: test_auth_cache.py  test_db_pool.py  test_diagnose.py
